--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: joby
-description: "jib finder is  an innovative app developed to connect job seekers with employers"
+description: "job finder is  an innovative app developed to connect job seekers with employers"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -44,6 +44,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   flutter_keyboard_visibility: ^6.0.0
   firebase_storage: ^12.4.0
+  url_launcher: ^6.3.1
 #  file_picker: ^8.1.7
 #  image_picker: ^1.1.2
 
